[tool.poetry]
name = "repl_python3_Buddy-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "1.1.4"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
pyttsx3 = "^2.90"
autopep8 = "^1.5.7"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
